gccida/g0/dwarf2out_decl
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_decl/src/dwarf2out.c:12080:19: error: use of undeclared identifier 'debug_info_level_0'
&& ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE ) 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_decl/src/dwarf2out.c:12096:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 <= DINFO_LEVEL_TERSE ) 
                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/dwarf2out_decl/src/obj/dwarf2out.o] Error 1
